--- a/kadry/src/main/webapp/portalpracodawca/sub/edycjadanych_pracownik.xhtml
+++ b/kadry/src/main/webapp/portalpracodawca/sub/edycjadanych_pracownik.xhtml
@@ -5,108 +5,109 @@
     xmlns:p="http://primefaces.org/ui"
     xmlns:ui="http://java.sun.com/jsf/facelets"
     >
-    <p:panelGrid columns="1" columnClasses="twenty-percent, eighty-percent" style="height: 400px;width: 1600px;">
-        <p:outputPanel style="height: 250px">
-            <h:form id="PracownikCreateForm">
-                <h:panelGroup id="display">
-                    <p:panel header="Dane nowego pracownika "/>
-                    <p:panelGrid columns="2" rendered="#{pracodawcaDaneView.selected != null}">
-                        <p:outputLabel value="nazwisko" for="nazwisko" />
-                        <p:inputText id="nazwisko" value="#{pracodawcaDaneView.selected.nazwisko}" title="nazwisko" required="true" requiredMessage="Wpisz nazwisko"/>
-                        <p:outputLabel value="imię" for="imie" />
-                        <p:inputText id="imie" value="#{pracodawcaDaneView.selected.imie}" title="imię" required="true" requiredMessage="Wpisz imię"/>
-                        <p:outputLabel value="pesel" for="pesel" />
-                        <p:inputText id="pesel" value="#{pracodawcaDaneView.selected.pesel}" title="pesel" required="true" requiredMessage="Wpisz Pesel"/>
-                        <p:outputLabel value="email" for="email" />
-                        <p:inputText id="email" value="#{pracodawcaDaneView.selected.email}" title="email"/>
-                        <p:outputLabel value="telefon" for="telefon" />
-                        <p:inputText id="telefon" value="#{pracodawcaDaneView.selected.telefon}" title="telefon"/>
-                    </p:panelGrid>
-                    <p:commandButton styleClass="buttonnorm" actionListener="#{pracodawcaDaneView.create}" value="#{bundle.Save}" update="display,@(form)" />
-                </h:panelGroup>
-            </h:form>
-        </p:outputPanel>
-        <p:outputPanel>
-            <h:form id="PracownikListForm">
-                <p:panel header="Wykaz pracowników w programieaaa">
-                    <p:dataTable id="datalist" value="#{pracodawcaDaneView.listapracownikow}" var="item2"
-                                 selectionMode="single" selection="#{pracodawcaDaneView.selectedlista}"
-                                 rowKey="#{item2.pesel}" sortBy="#{item2.nazwisko}" filteredValue="#{pracodawcaDaneView.listafiltered}"
-                                 style="height: 400px; overflow-y: scroll;"
-                                 rowsPerPageTemplate="20,100,250,500" paginatorPosition="top" paginator="true" rows="20"
-                                 >
+   
+            <p:panelGrid columns="1" columnClasses="twenty-percent, eighty-percent" style="height: 400px;width: 1600px;">
+                <p:outputPanel style="height: 250px">
+                    <h:form id="PracownikCreateForm">
+                        <h:panelGroup id="display">
+                            <p:panel header="Dane nowego pracownika "/>
+                            <p:panelGrid columns="2" rendered="#{pracodawcaDaneView.selected != null}">
+                                <p:outputLabel value="nazwisko" for="nazwisko" />
+                                <p:inputText id="nazwisko" value="#{pracodawcaDaneView.selected.nazwisko}" title="nazwisko" required="true" requiredMessage="Wpisz nazwisko"/>
+                                <p:outputLabel value="imię" for="imie" />
+                                <p:inputText id="imie" value="#{pracodawcaDaneView.selected.imie}" title="imię" required="true" requiredMessage="Wpisz imię"/>
+                                <p:outputLabel value="pesel" for="pesel" />
+                                <p:inputText id="pesel" value="#{pracodawcaDaneView.selected.pesel}" title="pesel" required="true" requiredMessage="Wpisz Pesel"/>
+                                <p:outputLabel value="email" for="email" />
+                                <p:inputText id="email" value="#{pracodawcaDaneView.selected.email}" title="email"/>
+                                <p:outputLabel value="telefon" for="telefon" />
+                                <p:inputText id="telefon" value="#{pracodawcaDaneView.selected.telefon}" title="telefon"/>
+                            </p:panelGrid>
+                            <p:commandButton styleClass="buttonnorm" actionListener="#{pracodawcaDaneView.create}" value="#{bundle.Save}" update="display,@(form)" />
+                        </h:panelGroup>
+                    </h:form>
+                </p:outputPanel>
+                <p:outputPanel>
+                    <h:form id="PracownikListForm">
+                        <p:panel header="Wykaz pracowników w programie">
+                            <p:dataTable id="datalist" value="#{pracodawcaDaneView.listapracownikow}" var="item2"
+                                         selectionMode="single" selection="#{pracodawcaDaneView.selectedlista}"
+                                         rowKey="#{item2.pesel}" sortBy="#{item2.nazwisko}" filteredValue="#{pracodawcaDaneView.listafiltered}"
+                                         style="height: 400px; overflow-y: scroll;"
+                                         rowsPerPageTemplate="20,100,250,500" paginatorPosition="top" paginator="true" rows="20"
+                                         >
 
-                        <p:column width="40" style="text-align: center;height: 30px;">
-                            <f:facet name="header">
-                                <h:outputText value="id"/>
-                            </f:facet>
-                            <h:outputText value="#{item2.id}"/>
-                        </p:column>
-                        <p:column filterBy="#{item2.nazwisko}" filterMatchMode="startsWith">
-                            <f:facet name="header">
-                                <h:outputText value="nazwisko"/>
-                            </f:facet>
-                            <h:outputText value="#{item2.nazwisko}"/>
-                        </p:column>
-                        <p:column filterBy="#{item2.imie}" filterMatchMode="startsWith">
-                            <f:facet name="header">
-                                <h:outputText value="imię"/>
-                            </f:facet>
-                            <h:outputText value="#{item2.imie}"/>
-                        </p:column>
-                        <p:column filterBy="#{item2.pesel}" filterMatchMode="startsWith">
-                            <f:facet name="header">
-                                <h:outputText value="Pesel"/>
-                            </f:facet>
-                            <h:outputText value="#{item2.pesel}"/>
-                        </p:column>
-                        <p:column width="150">
-                            <f:facet name="header">
-                                <h:outputText value="email"/>
-                            </f:facet>
-                            <p:inputText value="#{item2.email}">
-                                <p:ajax event="change" partialSubmit="true" global="false" listener="#{pracodawcaDaneView.edytuj(item2)}"/>
-                            </p:inputText>
-                        </p:column>
-                        <p:column style="text-align: center;">
-                            <f:facet name="header">
-                                <h:outputText value="telefon"/>
-                            </f:facet>
-                            <p:inputText value="#{item2.telefon}">
-                                <p:ajax event="change" partialSubmit="true" global="false" listener="#{pracodawcaDaneView.edytuj(item2)}"/>
-                            </p:inputText>
-                        </p:column>
-                        <p:column style="text-align: center;">
-                            <f:facet name="header">
-                                <h:outputText value="jest umowa"/>
-                            </f:facet>
-                             <h:outputText value="#{item2.czyjestumowa}"/>
-                        </p:column>
-                        <p:column filterBy="#{item2.datalogowania}" filterMatchMode="startsWith">
-                            <f:facet name="header">
-                                <h:outputText value="logowanie"/>
-                            </f:facet>
-                            <h:outputText value="#{item2.datalogowania}">
-                                <f:convertDateTime dateStyle="medium" locale="pl"/>
-                            </h:outputText>
-                        </p:column>
-                        <p:column style="text-align: center;">
-                            <f:facet name="header">
-                                <h:outputText value="zmienił"/>
-                            </f:facet>
-                            <h:outputText value="#{item2.modyfikowal}"/>
-                        </p:column>
-                    </p:dataTable>
-                </p:panel>
-            </h:form>
-        </p:outputPanel>
-         <p:outputPanel style="height: 400px">
-             <h:form id="MailBiuro">
-                 <p:panelGrid columns="2">
-                    <p:outputLabel value="poinformuj biuro, że dane pracowników zostały naniesione" for="mailbiuro" />
-                    <p:commandButton id="mailbiuro" styleClass="buttonnorm" value="mail" actionListener="#{pracodawcaDaneView.mailbiuro()}"/>
-                 </p:panelGrid>
-             </h:form>
-         </p:outputPanel>
-</p:panelGrid>    
+                                <p:column width="40" style="text-align: center;height: 30px;">
+                                    <f:facet name="header">
+                                        <h:outputText value="id"/>
+                                    </f:facet>
+                                    <h:outputText value="#{item2.id}"/>
+                                </p:column>
+                                <p:column filterBy="#{item2.nazwisko}" filterMatchMode="startsWith">
+                                    <f:facet name="header">
+                                        <h:outputText value="nazwisko"/>
+                                    </f:facet>
+                                    <h:outputText value="#{item2.nazwisko}"/>
+                                </p:column>
+                                <p:column filterBy="#{item2.imie}" filterMatchMode="startsWith">
+                                    <f:facet name="header">
+                                        <h:outputText value="imię"/>
+                                    </f:facet>
+                                    <h:outputText value="#{item2.imie}"/>
+                                </p:column>
+                                <p:column filterBy="#{item2.pesel}" filterMatchMode="startsWith">
+                                    <f:facet name="header">
+                                        <h:outputText value="Pesel"/>
+                                    </f:facet>
+                                    <h:outputText value="#{item2.pesel}"/>
+                                </p:column>
+                                <p:column width="150">
+                                    <f:facet name="header">
+                                        <h:outputText value="email"/>
+                                    </f:facet>
+                                    <p:inputText value="#{item2.email}">
+                                        <p:ajax event="change" partialSubmit="true" global="false" listener="#{pracodawcaDaneView.edytuj(item2)}"/>
+                                    </p:inputText>
+                                </p:column>
+                                <p:column style="text-align: center;">
+                                    <f:facet name="header">
+                                        <h:outputText value="telefon"/>
+                                    </f:facet>
+                                    <p:inputText value="#{item2.telefon}">
+                                        <p:ajax event="change" partialSubmit="true" global="false" listener="#{pracodawcaDaneView.edytuj(item2)}"/>
+                                    </p:inputText>
+                                </p:column>
+                                <p:column style="text-align: center;">
+                                    <f:facet name="header">
+                                        <h:outputText value="jest umowa"/>
+                                    </f:facet>
+                                    <h:outputText value="#{item2.czyjestumowa}"/>
+                                </p:column>
+                                <p:column filterBy="#{item2.datalogowania}" filterMatchMode="startsWith">
+                                    <f:facet name="header">
+                                        <h:outputText value="logowanie"/>
+                                    </f:facet>
+                                    <h:outputText value="#{item2.datalogowania}">
+                                        <f:convertDateTime dateStyle="medium" locale="pl"/>
+                                    </h:outputText>
+                                </p:column>
+                                <p:column style="text-align: center;">
+                                    <f:facet name="header">
+                                        <h:outputText value="zmienił"/>
+                                    </f:facet>
+                                    <h:outputText value="#{item2.modyfikowal}"/>
+                                </p:column>
+                            </p:dataTable>
+                        </p:panel>
+                    </h:form>
+                </p:outputPanel>
+                <p:outputPanel style="height: 400px">
+                    <h:form id="MailBiuro">
+                        <p:panelGrid columns="2">
+                            <p:outputLabel value="poinformuj biuro, że dane pracowników zostały naniesione" for="mailbiuro" />
+                            <p:commandButton id="mailbiuro" styleClass="buttonnorm" value="mail" actionListener="#{pracodawcaDaneView.mailbiuro()}"/>
+                        </p:panelGrid>
+                    </h:form>
+                </p:outputPanel>
+            </p:panelGrid>    
 </ui:composition>
