srobne naprawy biurowe wysylka

--- a/kadry/src/main/webapp/admin/sub/dialog/dialog_lista_plac_sub_podatek.xhtml
+++ b/kadry/src/main/webapp/admin/sub/dialog/dialog_lista_plac_sub_podatek.xhtml
@@ -39,7 +39,7 @@
             <p:column headerText="podatek Polska">
                 <bcf:outputpl value="#{itempasekpod.podatekdochodowy}"/>
             </p:column>
-            <p:column headerText="podstawa pod. zagr.">
+            <p:column headerText="podstawa pod. zagr. pln">
                 <bcf:outputpl value="#{itempasekpod.podstawaopodatkowaniazagranica}"/>
             </p:column>
             <p:column headerText="skład. oddeleg.">
