--- a/kadry/src/main/webapp/admin/sub/dialog/dialog_czaspracy_nieobecnosci.xhtml
+++ b/kadry/src/main/webapp/admin/sub/dialog/dialog_czaspracy_nieobecnosci.xhtml
@@ -216,9 +216,9 @@
                         </p:column>
                         <p:column>
                             <f:facet name="header">
-                                <h:outputText value="seria i nr"/>
+                                <h:outputText value="średnia ręcznie"/>
                             </f:facet>
-                            <h:outputText value="#{itemNieob.seriainrzwolnienia}"/>
+                             <bcf:outputpl value="#{itemNieob.sredniazmiennerecznie}"/>
                         </p:column>
                         <p:column style="text-align: center;" width="30">
                             <f:facet name="header">
