--- a/kadry/src/main/webapp/parametry/sub/edycjadanych_parametry.xhtml
+++ b/kadry/src/main/webapp/parametry/sub/edycjadanych_parametry.xhtml
@@ -614,11 +614,15 @@
             </p:tab>
             <p:tab title="Wynagrodzenie minimalne">
                 <h:form id="Minimalne">
-                    <p:panelGrid columns="4">
+                    <p:panelGrid columns="6">
                         <p:outputLabel value="rok"/>
                         <p:inputText value="#{wynagrodzenieMinimalneView.selected.rok}" maxlength="4"/>
-                        <p:outputLabel value="wynagrodzenie minimalne"/>
+                        <p:outputLabel value="wynagrodzenie minimalne brutto"/>
                         <bcf:inputplid id="pstawka1" value="#{wynagrodzenieMinimalneView.selected.kwotabrutto}"/>
+                        <p:outputLabel value="wynagrodzenie minimalne netto"/>
+                        <bcf:inputplid id="pstawka2" value="#{wynagrodzenieMinimalneView.selected.kwotanetto}"/>
+                        <p:outputLabel value="limit podstawy świadczeń chorobowych"/>
+                        <bcf:inputplid id="pstawka3" value="#{wynagrodzenieMinimalneView.selected.limitswiadczenchorobowych}"/>
                         <p:outputLabel value="data od" for="dataode" />
                         <p:inputText id="dataode" value="#{wynagrodzenieMinimalneView.selected.dataod}" title="data od" placeholder="____-__-__"  required="true"/>
                         <p:outputLabel value="data do" for="datadoe" />
@@ -630,7 +634,7 @@
                     <p:dataTable value="#{wynagrodzenieMinimalneView.lista}" var="itemwynmin" rowIndexVar="indexekwiw" rowKey="#{itemwynmin.id}"
                                  selection="#{wynagrodzenieMinimalneView.selected}" selectionMode="single"  sortBy="#{itemwynmin.rok}"
                                  scrollable="true" scrollHeight="700" scrollRows="30" 
-                                 style="width: 500px;margin-top: 30px;" emptyMessage="Nie wprowadzono wartości">
+                                 style="width: 600px;margin-top: 30px;" emptyMessage="Nie wprowadzono wartości">
                         <p:ajax event="rowSelect" partialSubmit="true"/>
                         <p:column width="30" style="text-align: center;">
                             <f:facet name="header">
@@ -646,9 +650,21 @@
                         </p:column>
                         <p:column width="50" style="text-align: center;">
                             <f:facet name="header">
-                                <h:outputText value="kwota"/>
+                                <h:outputText value="kwota brutto"/>
                             </f:facet>
                             <bcf:outputpl value="#{itemwynmin.kwotabrutto}"/>
+                        </p:column>
+                          <p:column width="50" style="text-align: center;">
+                            <f:facet name="header">
+                                <h:outputText value="kwota netto"/>
+                            </f:facet>
+                              <bcf:outputpl value="#{itemwynmin.kwotanetto}"/>
+                        </p:column>
+                           <p:column width="50" style="text-align: center;">
+                            <f:facet name="header">
+                                <h:outputText value="limit podstawy świadczeń chorobowych"/>
+                            </f:facet>
+                               <bcf:outputpl value="#{itemwynmin.limitswiadczenchorobowych}"/>
                         </p:column>
                          <p:column width="50" style="text-align: center;" sortBy="#{itemwynmin.rok}">
                             <f:facet name="header">
